ambient-istio/l7-policy.yaml
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: deny-non-get
  namespace: demo
spec:
  targetRef:
    group: gateway.networking.k8s.io
    kind: Gateway
    name: waypoint
  action: DENY
  rules:
  - to:
    - operation:
        methods: ["POST", "PUT", "DELETE", "PATCH"]
        ports: ["80"]
